@@ -16,10 +16,6 @@ import java.io.IOException;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.logging.Level;
@@ -103,7 +99,7 @@ public class CustomInstructionApplications {
    * @return true if pIsEnd is an endNode of pCISart
    */
   public boolean isEndState(final AbstractState pIsEnd, final CFANode pCIStart) throws CPAException {
-    assert(cis.containsKey(pCIStart));
+    assert cis.containsKey(pCIStart);
     return cis.get(pCIStart).isEndState(pIsEnd);
   }
 
@@ -157,7 +153,7 @@ public class CustomInstructionApplications {
         name = "ciSignature",
         description = "Signature for custom instruction, describes names and order of input and output variables of a custom instruction")
     @FileOption(FileOption.Type.OUTPUT_FILE)
-    protected Path ciSpec = Paths.get("ci_spec.txt");
+    protected Path ciSpec = Path.of("ci_spec.txt");
 
     protected final LogManager logger;
     protected final ShutdownNotifier shutdownNotifier;
@@ -206,7 +202,7 @@ public class CustomInstructionApplications {
       description = "File specifying start locations of custom instruction applications"
     )
     @FileOption(FileOption.Type.REQUIRED_INPUT_FILE)
-    private Path appliedCustomInstructionsDefinition = Paths.get("ci_def.txt");
+    private Path appliedCustomInstructionsDefinition = Path.of("ci_def.txt");
 
     public CustomInstructionApplicationsFromFile(Configuration pConfig, final CFA pCfa,
         LogManager pLogger, ShutdownNotifier pSdNotifier) throws InvalidConfigurationException {
@@ -248,7 +244,7 @@ public class CustomInstructionApplications {
       description = "File specifying start locations of custom instruction applications"
     )
     @FileOption(FileOption.Type.OUTPUT_FILE)
-    private Path appliedCustomInstructionsDefinition = Paths.get("ci_def.txt");
+    private Path appliedCustomInstructionsDefinition = Path.of("ci_def.txt");
 
     public CustomInstructionApplicationsAutomatic(
         Configuration pConfig, final CFA pCfa, LogManager pLogger, ShutdownNotifier pSdNotifier)
@@ -294,7 +290,7 @@ public class CustomInstructionApplications {
 
     @Option(secure=true, name="definitionFile", description = "File to dump start location of identified custom instruction applications")
     @FileOption(FileOption.Type.OUTPUT_FILE)
-    private Path foundCustomInstructionsDefinition = Paths.get("ci_def.txt");
+    private Path foundCustomInstructionsDefinition = Path.of("ci_def.txt");
 
     public CustomInstructionsForBinaryOperator(Configuration pConfig, LogManager pLogger,
         ShutdownNotifier pSdNotifier, CFA pCfa) throws InvalidConfigurationException {
@@ -331,11 +327,10 @@ public class CustomInstructionApplications {
       start.addLeavingEdge(ciEdge);
       end.addEnteringEdge(ciEdge);
       // build custom instruction
-      List<String> input = new ArrayList<>(2);
-      input.add("x");
-      input.add("y");
-      CustomInstruction ci = new CustomInstruction(start, Collections.singleton(end),
-          input, ImmutableList.of("r"), shutdownNotifier);
+      ImmutableList<String> input = ImmutableList.of("x", "y");
+      CustomInstruction ci =
+          new CustomInstruction(
+              start, ImmutableSet.of(end), input, ImmutableList.of("r"), shutdownNotifier);
 
       // find applied custom instructions in program
       try (Writer aciDef =
@@ -366,8 +361,8 @@ public class CustomInstructionApplications {
         br.write(ciString.substring(ciString.indexOf("a")-1,ciString.length()-1) + ";");
       }
 
-      return new AppliedCustomInstructionParser(shutdownNotifier, logger, cfa).
-          parse(ci, foundCustomInstructionsDefinition);
+      return new AppliedCustomInstructionParser(shutdownNotifier, logger, cfa)
+          .parse(ci, foundCustomInstructionsDefinition);
     }
 
     @Override
