@@ -10,7 +10,6 @@ package org.sosy_lab.cpachecker.util.slicing;
 
 import com.google.common.collect.ImmutableSet;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Set;
 import java.util.logging.Level;
 import org.sosy_lab.common.Classes;
@@ -38,7 +37,7 @@ public class ReducerExtractor extends AllTargetsExtractor {
   @FileOption(FileOption.Type.REQUIRED_INPUT_FILE)
   private Set<Path> conditionFiles =
       ImmutableSet.of(
-          Paths.get("output/AssumptionAutomaton.txt"),
+          Path.of("output/AssumptionAutomaton.txt"),
           Classes.getCodeLocation(ReducerExtractor.class)
               .resolveSibling("config/specification/AssumptionGuidingAutomaton.spc"));
 
